--- a/index.html
+++ b/index.html
@@ -6,11 +6,89 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-
     <title>First page</title>
+    <style>
+        body {
+            padding:70px;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Bootstrap Examples</h1>
+    <h1>h1.bootstrap heading</h1>
+    <h2>h2.bootstrap heading</h2>
+    <h3>h3.bootstrap heading</h3>
+    <h4>h4.bootstrap heading</h4>
+    <h5>h5.bootstrap heading</h5>
+    <h6>h6.bootstrap heading</h6>
+
+    <br><br>
+
+    <p class="h1">h1.bootstrap heading</p>
+    <p class="h2">h2.bootstrap heading</p>
+    <p class="h3">h3.bootstrap heading</p>
+    <p class="h4">h4.bootstrap heading</p>
+    <p class="h5">h5.bootstrap heading</p>
+    <p class="h6">h6.bootstrap heading</p>
+
+    <br><br>
+
+    <h1>Bootstrap heading 
+        <small class="text-muted">sub heading</small>
+    </h1>
+
+    <br><br>
+    <h1 class="display-1">Display 1</h1>
+    <h1 class="display-2">Display 2</h1>
+    <h1 class="display-3">Display 3</h1>
+    <h1 class="display-4">Display 4</h1>
+    <h1 class="display-5">Display 5</h1>
+    <h1 class="display-6">Display 6</h1>  
+
+
+    <br><br>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem est veniam fugit aliquid cumque quidem quae, sunt quia praesentium mollitia accusamus alias minus expedita iusto possimus labore veritatis repellat maxime!</p>
+
+
+
+    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem est veniam fugit aliquid cumque quidem quae, sunt quia praesentium mollitia accusamus alias minus expedita iusto possimus labore veritatis repellat maxime!</p>
+
+<br><br>
+
+<p class="text-lowercase">LOWERCASE</p>
+<p class="text-uppercase">uppercase</p>
+<p class="text-capitalize">capitalized text</p>
+
+
+<br><br>
+
+<p class="font-weight-bold">Bold text</p>
+<p class="font-weight-normal">Normal weight text</p>
+<p class="font-weight-light">Light weight</p>
+<p class="font-italic">Italic text</p>
+
+<br><br>
+
+<p>Lorem <mark>ipsum</mark> dolor <del>sit amet</del> consectetur, <small>adipisicing</small> elit. Tempore, quia unde <u>pariatur</u> iusto iure culpa <strong>quibusdam</strong>, dicta modi quod natus odio iste voluptas dolores ea blanditiis quasi amet neque fuga.</p>
+
+<p>Lorem ipsum <span class="text-decoration-line-through">dolor</span> sit <span class="small">amet consectetur</span> adipisicing elit. Suscipit animi excepturi nam sapiente in? Sint, repudiandae alias. Natus amet veritatis reiciendis eos repellat id voluptatem eius reprehenderit ea, quis laborum.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
