--- a/index.html
+++ b/index.html
@@ -12,70 +12,49 @@
             padding:70px;
         }
 
+        .box {
+            padding: 20px;
+            margin-bottom: 10px;
+        }
+
     </style>
 </head>
 <body>
-    <h1>h1.bootstrap heading</h1>
-    <h2>h2.bootstrap heading</h2>
-    <h3>h3.bootstrap heading</h3>
-    <h4>h4.bootstrap heading</h4>
-    <h5>h5.bootstrap heading</h5>
-    <h6>h6.bootstrap heading</h6>
-
-    <br><br>
-
-    <p class="h1">h1.bootstrap heading</p>
-    <p class="h2">h2.bootstrap heading</p>
-    <p class="h3">h3.bootstrap heading</p>
-    <p class="h4">h4.bootstrap heading</p>
-    <p class="h5">h5.bootstrap heading</p>
-    <p class="h6">h6.bootstrap heading</p>
-
-    <br><br>
-
-    <h1>Bootstrap heading 
-        <small class="text-muted">sub heading</small>
-    </h1>
-
-    <br><br>
-    <h1 class="display-1">Display 1</h1>
-    <h1 class="display-2">Display 2</h1>
-    <h1 class="display-3">Display 3</h1>
-    <h1 class="display-4">Display 4</h1>
-    <h1 class="display-5">Display 5</h1>
-    <h1 class="display-6">Display 6</h1>  
-
-
-    <br><br>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem est veniam fugit aliquid cumque quidem quae, sunt quia praesentium mollitia accusamus alias minus expedita iusto possimus labore veritatis repellat maxime!</p>
-
-
-
-    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem est veniam fugit aliquid cumque quidem quae, sunt quia praesentium mollitia accusamus alias minus expedita iusto possimus labore veritatis repellat maxime!</p>
-
-<br><br>
-
-<p class="text-lowercase">LOWERCASE</p>
-<p class="text-uppercase">uppercase</p>
-<p class="text-capitalize">capitalized text</p>
+   
+    <p class="text-primary">text primary</p>
+    <p class="text-secondary">text secondary</p>
+    <p class="text-success">text success</p>
+    <p class="text-danger">text danger</p>
+    <p class="text-warning">text warning</p>
+    <p class="text-info">text info</p>
+    <p class="text-light bg-dark">text light</p>
+    <p class="text-dark">text dark</p>
+    <p class="text-muted">text muted</p>
+    <p class="text-white bg-dark">text white</p>
+    <p class="text-black-50">text white</p>
+    <p class="text-black-50 bg-dark">text white1</p>
 
 
 <br><br>
 
-<p class="font-weight-bold">Bold text</p>
-<p class="font-weight-normal">Normal weight text</p>
-<p class="font-weight-light">Light weight</p>
-<p class="font-italic">Italic text</p>
+<p>
+    <a href="#" class="text-danger">text-danger</a>
+</p>
+
+<p>
+    <a href="#" class="text-success">text-success</a>
+</p>
+
+
+<p class="bg-primary box">text-primary</p>
+<p class="bg-secondary">text-secondary</p>
+
 
 <br><br>
 
-<p>Lorem <mark>ipsum</mark> dolor <del>sit amet</del> consectetur, <small>adipisicing</small> elit. Tempore, quia unde <u>pariatur</u> iusto iure culpa <strong>quibusdam</strong>, dicta modi quod natus odio iste voluptas dolores ea blanditiis quasi amet neque fuga.</p>
-
-<p>Lorem ipsum <span class="text-decoration-line-through">dolor</span> sit <span class="small">amet consectetur</span> adipisicing elit. Suscipit animi excepturi nam sapiente in? Sint, repudiandae alias. Natus amet veritatis reiciendis eos repellat id voluptatem eius reprehenderit ea, quis laborum.</p>
-
-
-
+<span class="badge bg-primary">primary</span>
+<span class="badge bg-secondary">secondary</span>
+<span class="badge bg-success">succcess</span>
 
 
 
