bootstrap padding and margin

--- a/index.html
+++ b/index.html
@@ -21,44 +21,14 @@
 </head>
 <body>
    
-    <p class="text-primary">text primary</p>
-    <p class="text-secondary">text secondary</p>
-    <p class="text-success">text success</p>
-    <p class="text-danger">text danger</p>
-    <p class="text-warning">text warning</p>
-    <p class="text-info">text info</p>
-    <p class="text-light bg-dark">text light</p>
-    <p class="text-dark">text dark</p>
-    <p class="text-muted">text muted</p>
-    <p class="text-white bg-dark">text white</p>
-    <p class="text-black-50">text white</p>
-    <p class="text-black-50 bg-dark">text white1</p>
+    <div class="bg-success p-3">First</div>
+    <div class="bg-danger pt-5 mt-2">second</div>
 
+    <br><br>
 
-<br><br>
-
-<p>
-    <a href="#" class="text-danger">text-danger</a>
-</p>
-
-<p>
-    <a href="#" class="text-success">text-success</a>
-</p>
-
-
-<p class="bg-primary box">text-primary</p>
-<p class="bg-secondary">text-secondary</p>
-
-
-<br><br>
-
-<span class="badge bg-primary">primary</span>
-<span class="badge bg-secondary">secondary</span>
-<span class="badge bg-success">succcess</span>
-
-
-
-
+    <div class="bg-primary p-3 mx-auto" style = "text-align: center; width: 150px;">
+        centered element
+    </div>
 
 
 
