--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
 </head>
 <body>
    
-    <div class="bg-success p-3">First</div>
-    <div class="bg-danger pt-5 mt-2">second</div>
+    <div class="bg-light mt-3 p-4"></div>
+    <div class="bg-light mt-3 p-4 border"></div>
+    <div class="bg-light mt-3 p-4 border-top"></div>
+    <div class="bg-light mt-3 p-4 border-left"></div>
+    <div class="bg-light mt-3 p-4 border-right"></div>
+    <div class="bg-light mt-3 p-4 border-bottom"></div>
 
     <br><br>
 
-    <div class="bg-primary p-3 mx-auto" style = "text-align: center; width: 150px;">
-        centered element
-    </div>
-
+    <div class="bg-light mt-2 p-4 rounded shadow-lg border border-primary"></div>
 
 
 
