bootstrap display properties

--- a/index.html
+++ b/index.html
@@ -21,21 +21,92 @@
 </head>
 <body>
    
-    <div class="bg-light mt-3 p-4"></div>
-    <div class="bg-light mt-3 p-4 border"></div>
-    <div class="bg-light mt-3 p-4 border-top"></div>
-    <div class="bg-light mt-3 p-4 border-left"></div>
-    <div class="bg-light mt-3 p-4 border-right"></div>
-    <div class="bg-light mt-3 p-4 border-bottom"></div>
+  
+    <p class="text-left">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed et quaerat autem repellat necessitatibus, nam pariatur maxime facere nesciunt temporibus, totam reiciendis, voluptate error officiis veritatis? Enim temporibus quia tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id earum alias impedit voluptate ipsum facilis est aut cum, perferendis doloribus inventore quaerat sit quisquam? Exercitationem reprehenderit sunt beatae facere. Sint!</p>
 
-    <br><br>
+    <p class="text-right">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed et quaerat autem repellat necessitatibus, nam pariatur maxime facere nesciunt temporibus, totam reiciendis, voluptate error officiis veritatis? Enim temporibus quia tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aperiam, numquam aliquam suscipit ea voluptates consequuntur quae eius eos veniam aliquid quia? Repellendus recusandae, quibusdam reprehenderit a magnam quaerat consectetur.</p>
 
-    <div class="bg-light mt-2 p-4 rounded shadow-lg border border-primary"></div>
+
+    <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed et quaerat autem repellat necessitatibus, nam pariatur maxime facere nesciunt temporibus, totam reiciendis, voluptate error officiis veritatis? Enim temporibus quia tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ipsum modi pariatur, ex, dolorem nesciunt porro iusto dignissimos, neque aliquam velit id cupiditate magni quos assumenda dolorum eveniet! Sunt, obcaecati.</p>
 
 
 
+<blockquote class="blockquote">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia veritatis dolorum recusandae. Totam nostrum excepturi veritatis, quia tenetur aperiam eum fuga ipsam vel quis mollitia suscipit, eligendi in dolor ab?</p>
+    <footer class="blockquote-footer">lorem, ipsum</footer>
+</blockquote>
+
+<blockquote class="blockquote text-right">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia veritatis dolorum recusandae. Totam nostrum excepturi veritatis, quia tenetur aperiam eum fuga ipsam vel quis mollitia suscipit, eligendi in dolor ab?</p>
+    <footer class="blockquote-footer">lorem, ipsum</footer>
+</blockquote>
+
+<blockquote class="blockquote text-center">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia veritatis dolorum recusandae. Totam nostrum excepturi veritatis, quia tenetur aperiam eum fuga ipsam vel quis mollitia suscipit, eligendi in dolor ab?</p>
+    <footer class="blockquote-footer">lorem, ipsum</footer>
+</blockquote>
+
+<blockquote class="blockquote">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia veritatis dolorum recusandae. Totam nostrum excepturi veritatis, quia tenetur aperiam eum fuga ipsam vel quis mollitia suscipit, eligendi in dolor ab?</p>
+    <footer class="blockquote-footer">lorem, ipsum</footer>
+</blockquote>
+
+<br><br>
+
+<div class="clearfix">
+
+    <div class="bg-primary float-right" style = "width:100px; height:100px;"></div>
+<div class="bg-success float-left" style = "width:100px; height:100px;"></div>
+<div class="bg-danger float-left" style = "height:100px;"></div>
 
 
+
+</div>
+
+<br><br>
+
+<div class="d-inline bg-primary text-white p-3">d-inline</div>
+<div class="d-inline bg-primary text-white p-3">d-inline</div>
+
+
+<br><br>
+
+<span class="d-block bg-primary text-white p-3">d-block</span>
+<span class="d-block bg-primary text-white p-3">d-block</span>
+
+<br><br>
+
+<div class="bg-primary d-inline-block p-3">
+    <h3>product Name</h3>
+    Descriptipon
+</div>
+
+<div class="bg-primary d-inline-block p-3">
+    <h3>product Name</h3>
+    Descriptipon
+</div>
+
+
+<br><br>
+
+<div class="bg-warning">d-none</div>
+
+<br><br>
+
+<div class="invisible bg-warning">d-none</div>
+
+
+
+
+<div class="badge bg-primary text-wrap" style="width:5rem;">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. A, alias?
+
+</div>
+
+
+<br><br>
+
+<div class="bg-primary text-nowrap" style="width:6rem;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione distinctio repellat quos libero reiciendis, animi recusandae magni ut eaque minima.</div>
 
 
 
