--- a/index.html
+++ b/index.html
@@ -18,65 +18,99 @@
 </head>
 <body>
    
- <div class="mb-3">
-    <label for="email" class="form-label">Email</label>
-    <input type="email" name="email" id="email" class="form-control" placeholder="enter email">
- </div>
+   <div class="form-check">       
+        <input type="checkbox" name="" id="ch1" class="form-check-input">
+        <label for="ch1" class="form-check-label">Default Checkbox</label>
+   </div> 
 
- <div class="my-3">
-    <label for="intro" class="form-label">Intro</label>
-    <textarea name="intro" id="intro" class="form-control"></textarea>
- </div>
- 
- <div class="my-3">
-    <label for="name" class="form-label">Name</label>
-    <input type="text" name="name" id="name" class="form-control form-control-sm" placeholder="enter name ">
- </div>
+<br><br>
 
-  <div class="my-3">
-    <label for="name" class="form-label">SurName</label>
-    <input type="text" name="name" id="name" class="form-control form-control-lg" placeholder="enter name ">
- </div>
+<div class="form-check">       
+        <input type="checkbox" name="" id="ch2" class="form-check-input" checked>
+        <label for="ch2" class="form-check-label">Default Checkbox</label>
+   </div> 
 
- <div class="my-3">
-    <label for="name" class="form-label">Username</label>
-    <input type="text" name="name" class="form-control-plaintext" readonly value="sadikturan">
- </div>
+<div class="form-check">       
+        <input type="checkbox" name="" id="ch3" class="form-check-input" checked disabled>
+        <label for="ch3" class="form-check-label">Default Checkbox</label>
+   </div>
 
-<div class="my-3">
-    <label for="cities" class="form-label">Cities</label>
-    <input type="text" list="citylist" class="form-control" placeholder="type...">
+   <br><br>
+<div class="form-check">       
+        <input type="radio" name="rd" id="rd1" class="form-check-input">
+        <label for="rd1" class="form-check-label">Default Radio Button</label>
+   </div>
 
-    <datalist id="citylist">
+   <div class="form-check">       
+        <input type="radio" name="rd" id="rd2" class="form-check-input" checked>
+        <label for="rd2" class="form-check-label">Default Radio Button</label>
+   </div>
 
-        <option value="Kocaeli"></option>
-        <option value="İstanbul"></option>
-        <option value="İzmir"></option>
-        <option value="Rize"></option>
-        <option value="Ankara"></option>
+   <div class="form-check form-check-inline">       
+        <input type="radio" name="rd2" id="rd3" class="form-check-input" checked disabled>
+        <label for="rd3" class="form-check-label">Default1 Radio Button</label>
+   </div>
 
-    </datalist>
- </div>
+    <div class="form-check form-check-inline">       
+        <input type="radio" name="rd2" id="rd3" class="form-check-input" checked disabled>
+        <label for="rd3" class="form-check-label">Default2 Radio Button</label>
+   </div>
 
-<div class="my-3">
-    <label for="cities" class="form-label">Cities</label>
-    <select name="" id="" class="form-select">
 
-         <option value="41">Kocaeli</option>
-        <option value="34">İstanbul</option>
-        <option value="35">İzmir</option>
-        <option value="53">Rize</option>
-        <option value="06">Ankara</option>
-    </select>
- </div>
+   <div class="form-check form-switch">       
+        <input type="checkbox" name="" id="sw1" class="form-check-input" >
+        <label for="sw1" class="form-check-label">switch1 Button</label>
+   </div>
 
- <div class="form-file">
-    <input type="file" name="" id="" class="form-file-input" id="customFile">
-    <label for="customFile" class="form-file-label">
-        <span class="form-file-text">Dosya Seç</span>
-        <span class="form-file-button">Dosya Ara</span>
-    </label>
- </div>
+     <div class="form-check form-switch">       
+        <input type="checkbox" name="" id="sw2" class="form-check-input" >
+        <label for="sw2" class="form-check-label">switch Button</label>
+   </div>
+
+
+    <div class="form-check form-switch">       
+        <input type="checkbox" name="" id="sw2" class="form-check-input"  >
+        <label for="sw2" class="form-check-label">switch Button</label>
+   </div>
+
+    <div class="form-check form-switch">       
+        <input type="checkbox" name="" id="sw2" class="form-check-input"  >
+        <label for="sw2" class="form-check-label">switch Button</label>
+   </div>
+
+
+   <br><br><br>
+
+   <p>
+    <input type="checkbox" id="btn-check1" class="btn-check" autocomplete="off">
+    <label for="btn-check1" class="btn btn-primary">Single Toggle</label>
+   </p>
+
+     <p>
+    <input type="checkbox" id="btn-check2" class="btn-check" autocomplete="off">
+    <label for="btn-check2" class="btn btn-outline-primary">Single Toggle</label>
+   </p>
+
+   <p>
+    <div class="btn-group">
+        <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" checked>
+        <label for="option1" class="btn btn-outline-danger">Checked</label>
+    </div>
+
+    <div class="btn-group">
+        <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
+        <label for="option2" class="btn btn-outline-danger">radio</label>
+    </div>
+
+    <div class="btn-group">
+        <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
+        <label for="option3" class="btn btn-outline-danger">radio</label>
+    </div>
+   </p>
+
+
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
